# new

./: .gitignore  CMakeLists.txt  config.h  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc  styles.qss
